label cells left align fix

--- a/modules/CRM/Calendar/Event/theme/default.css
+++ b/modules/CRM/Calendar/Event/theme/default.css
@@ -110,18 +110,21 @@
     vertical-align: middle;
     padding-left: 5px;
     padding-right: 5px;
+    text-align: left;
 }
 
 #CRM_Calendar_Event_Personal table.view .data {
     border-bottom: 1px solid #B3B3B3;
     padding-left: 5px;
     padding-right: 5px;
+    text-align: left;
 }
 
 #CRM_Calendar_Event_Personal table.edit .data {
     border-bottom: none;
     padding-left: 4px;
     padding-right: 4px;
+    text-align: left;
 }
 
 #CRM_Calendar_Event_Personal table.edit {
