--- a/modules/CRM/Contacts/theme/Contact.css
+++ b/modules/CRM/Contacts/theme/Contact.css
@@ -26,9 +26,11 @@
     padding-left: 5px;
     padding-right: 5px;
     width: 30%;
+    text-align: left;
 }
 
 #CRM_Contacts__Contact .data {
+    text-align: left;
     width: 70%;
 }
 
