--- a/modules/CRM/Tasks/theme/default.css
+++ b/modules/CRM/Tasks/theme/default.css
@@ -5,6 +5,7 @@
     background-color: #336699;
     padding-left: 5px;
     padding-right: 5px;
+    text-align: left;
 }
 
 /* data */
@@ -13,6 +14,7 @@
     padding-left: 2px;
     padding-right: 2px;
     background-color: white;
+    text-align: left;
 }
 
 #CRM_Tasks .data input,
