--- a/modules/Utils/RecordBrowser/theme/View_entry.css
+++ b/modules/Utils/RecordBrowser/theme/View_entry.css
@@ -26,17 +26,22 @@
     padding-left: 5px;
     padding-right: 5px;
     width: 150px;
+    text-align: left;
 }
+
 /*
 #Utils_RecordBrowser__View_entry table.edit .label {
     border: 2px solid white;
 }
 */
+
 #Utils_RecordBrowser__View_entry .long_label {
+    text-align: left;
     width: 20%;
 }
 
 #Utils_RecordBrowser__View_entry .data {
+    text-align: left;
     /*
 	width: 60%;
 	*/
